   sigfigs, sncl_format that override preference file entries
 * use of preference file is not required as every entry can be overridden on command line
 * when output directory does not exist, ispaq tries to create it. If that fails, it defaults to current directory 
 * searches for miniSEED files down directory structure
 * output file names replace characters "*,?" with "x"
 * makes channel filters less restrictive
 * bug fix for crashes when internet connection not available
 * bug fix for day looping when starttime and endtime have different years
 * additional error handling

0.8.8
 * fixed bug whwen specifying FDSN webservices url that begins with https
 * when USGS is specified as event_url, bypass ObsPy URL_MAPPINGS and map to https:/earthquake.usgs.gov

0.8.7
 * adds repository argument to get_dataselect, to work with IRISSeismic_1.4.1.tar.gz
 * not backwards compatible with IRISSeismic versions < 1.4.0

0.8.6
 * typo fix in crossCorrelation.py that was causing it to fail

0.8.5
 * exits cleanly if no metrics can be run
 * PSD metrics now use sample rate from r_stream instead of get_availability()
 * bug fix for concierge.availability distance selection when latitude and longitude do not exist
 * additional sanity checks for metadata and station_url
 * changes in logger levels for some cases, improves messages
 * improves error checking for event based metrics, concierge.dataselect
 * additional documentation

0.8.4
 * checks whether metric available in R package can be run with current ISPAQ version
 * when using local miniSEED files, will not return flag metrics for flags that do not exist in ObsPy traces
 * license changed to GNU Lesser General Public License
 * bug fix for missing station XML

0.8.3
 * adds -L options to run_ispaq.py, lists available metrics

0.8.2
 * added checks for correct miniconda environment
 * adds more checks for preference file data access content, bug fixes when set to 'None'
 * fixes bug in handling of travel time