@@ -114,12 +114,15 @@ def orientationCheck_metrics(concierge):
                                                       minradius=eventMinradius, maxradius=eventMaxradius)
         except NoAvailableDataError as e:
             logger.info('Skipping event with no available data')
+            concierge.sncl_patterns = original_sncl_patterns
             continue
         except Exception as e:
             logger.warning('Skipping event because concierge.get_availability failed: %s' % (e))
+            concierge.sncl_patterns = original_sncl_patterns
             continue
         if availability is None:
             logger.info("Skipping event with no available data")
+            concierge.sncl_patterns = original_sncl_patterns
             continue
 
         concierge.sncl_patterns = original_sncl_patterns
